continuamos con el proceso, falta mucho camino aun

--- a/index.html
+++ b/index.html
@@ -30,32 +30,34 @@
 
     <div class="content">
         <main class="cards">
-            <h3>Nuestro Blog</h3>
-            <article class="card_1">
-                <img src="./images/blog1.webp" alt="Coffee image">
-                <div class="card_content_1">
-                    <h4>Tipos de grano de café</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <a href="">LEER ENTRADA</a>
-                </div>
-            </article>    
-            <article class="card_2">
-                <img src="./images/blog2.webp" alt="Coffee and Glasses image">
-                <div class="card_content_2">
-                    <h4>Tres deliciosas recetas de café</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <a href="">LEER ENTRADA</a>
-                </div>
-            </article>    
-            <article class="card_3"> 
-                <img src="./images/blog3.webp" alt="coffee cup image">
-                <div class="card_content_3">
-                    <h4>Beneficios del café</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <a href="">LEER ENTRADA</a>
-                </div>
-            </article>
-            <aside class="card_4">
+            <div class="main_cards">
+                <h3>Nuestro Blog</h3>
+                <article class="card_1">
+                    <img src="./images/blog1.webp" alt="Coffee image">
+                    <div class="card_content_1">
+                        <h4>Tipos de grano de café</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a href="">LEER ENTRADA</a>
+                    </div>
+                </article>    
+                <article class="card_2">
+                    <img src="./images/blog2.webp" alt="Coffee and Glasses image">
+                    <div class="card_content_2">
+                        <h4>Tres deliciosas recetas de café</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a href="">LEER ENTRADA</a>
+                    </div>
+                </article>    
+                <article class="card_3"> 
+                    <img src="./images/blog3.webp" alt="coffee cup image">
+                    <div class="card_content_3">
+                        <h4>Beneficios del café</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a href="">LEER ENTRADA</a>
+                    </div>
+                </article>
+            </div>
+            <aside class="card_aside">
                 <h3>NUESTROS CURSOS Y TALLERES</h3>
                 <ul class="card_courses_4">
                     <li>
