casi terminado el CSS de la pagina principal, quedo muy similar al original, falta hacerlo responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div> 
         <div class="sub_tittle">
             <h2>Blog de café con consejos y cursos</h2>
-            <p>aprende de los expertos con las mejores recetas y concejos</p>
+            <p class="sub_text">aprende de los expertos con las mejores recetas y concejos</p>
         </div> 
     </header>
 
@@ -54,23 +54,44 @@
                         <h4>Beneficios del café</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                         <a href="">LEER ENTRADA</a>
+                    <div class="cards_content">
+                        <h4>Tipos de grano de café</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a class="button_card_1" href="./ENTRADA">LEER ENTRADA</a>
+                    </div>
+                </article>    
+                <article class="card_1">
+                    <img src="./images/blog2.webp" alt="Coffee and Glasses image">
+                    <div class="cards_content">
+                        <h4>Tres deliciosas recetas de café</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a class="button_card_1" href="">LEER ENTRADA</a>
+                    </div>
+                </article>    
+                <article class="card_1"> 
+                    <img src="./images/blog3.webp" alt="coffee cup image">
+                    <div class="cards_content">
+                        <h4>Beneficios del café</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <a class="button_card_1" href="">LEER ENTRADA</a>
                     </div>
                 </article>
             </div>
             <aside class="card_aside">
                 <h3>NUESTROS CURSOS Y TALLERES</h3>
+                <h3>Nuestros cursos y talleres</h3>
                 <ul class="card_courses_4">
-                    <li>
+                    <li class="courses">
                         <h4>Técnicas de extraccion de café</h4>
-                        <p>Pecio: Gratis</p>
-                        <p>Cupo: 20</p>
-                        <a href="">MAS INFORMACIÓN</a>
+                        <p class="bold_p">Precio: <span class="normal">Gratis</span></p>
+                        <p class="bold_p">Cupo: <span class="normal">20</span></p>
+                        <a class="courses_button" href="">MAS INFORMACIÓN</a>
                     </li>
-                    <li>
+                    <li class="courses">
                         <h4>Cuatro recetas de café para principiantes</h4>
-                        <p>Pecio: Gratis</p>
-                        <p>Cupo: 20</p>
-                        <a href="">MAS INFORMACIÓN</a>
+                        <p class="bold_p">Precio: <span class="normal">Gratis</span></p>
+                        <p class="bold_p">Cupo: <span class="norma">20</span></p>
+                        <a  class="courses_button" href="">MAS INFORMACIÓN</a>
                     </li>
                 </ul>
             </aside>
@@ -83,7 +104,6 @@
                 Blog
                 <span class="title_bold">DeCafé</span>
             </h1>
-
             <nav class="nav_bar">
                 <a href="">Nosotros</a>
                 <a href="">Cursos</a>
